--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
           <hr>
         </div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h3>Good At:</h3>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>php: original php , smarty , ThinkPHP , MooPHP , MIE , lamp config</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>Something else I'm learning about:</h3>
+
+<p>ZendFramework2 , Yaf , Blitz , Vim , working as an Architect</p>
+
+<h3>Be continued ... </h3>
       </section>
 
     </div>
