update title stylesheet and sth about work skill

--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Vian</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-  </head>
-  <body>
-    <div class="wrapper">
-
-      <section>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<title>Vian</title>
+<link rel="stylesheet" href="stylesheets/styles.css">
+<link rel="stylesheet" href="stylesheets/pygment_trac.css">
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<!--[if lt IE 8]>
+<link rel="stylesheet" href="stylesheets/ie.css">
+<![endif]-->
+</head>
+<body>
+<div class="wrapper">
+    <section>
         <div id="title">
-          <h1>Vian</h1>
-          <p>php stylite</p>
-          <hr>
+            <h1>Vian</h1>
+            <p>php stylite</p>
+            <hr>
         </div>
 
-<h3>Good At:</h3>
+        <h3>Good At:</h3>
 
-<p>php: original php , smarty , ThinkPHP , MooPHP , MIE , lamp config</p>
+        <p>php: original php , smarty , ThinkPHP , MooPHP , MIE</p>
 
+        <p>frontend: html , css , javascript(with jQuery)</p>
 
-<h3>Something else I'm learning about:</h3>
+        <p>os(with apache,php,mysql config): ubuntu , centos , windows , mac</p>
 
-<p>ZendFramework2 , Yaf , Blitz , Vim , working as an Architect</p>
+        <p><b>team work</b></p>
 
-<h3>Be continued ... </h3>
-      </section>
+        <h3>Something else I'm learning about:</h3>
 
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+        <p>ZendFramework2 , Yaf , Blitz , Vim , server optimization</p>
+
+        <p><b>working as an Architect , lead a team</b></p>
+
+        <h3>Be continued ... </h3>
+    </section>
+
+</div>
+<!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+</body>
 </html>
