--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
 
         <h3>Good At:</h3>
 
-        <p>php: original php , smarty , ThinkPHP , MooPHP , MIE</p>
+        <p>php: original php , Smarty , ThinkPHP , MooPHP , MIE</p>
 
         <p>frontend: html , css , javascript(with jQuery)</p>
 
         <p>os(with apache,php,mysql config): ubuntu , centos , windows , mac</p>
+        
+        <p>tools: Zend Studio , Editplus , Sublime Text , Vim , Notepad(at the begining of php study :) )</p>
+
+        <p>teamwork: office(word , excel , ppt , visio) , svn</p>
 
         <p><b>team work</b></p>
 
         <h3>Something else I'm learning about:</h3>
 
-        <p>ZendFramework2 , Yaf , Blitz , Vim , server optimization</p>
+        <p>ZendFramework2 , Yaf , Blitz , Vim , server optimization , git</p>
 
         <p><b>working as an Architect , lead a team</b></p>
 
