--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <h3>Good At:</h3>
 
-        <p>php: original php , Smarty , ThinkPHP , MooPHP , MIE</p>
+        <p>php: original php , Smarty ,Codeigniter , ThinkPHP , MooPHP , MIE</p>
 
         <p>frontend: html , css , javascript(with jQuery)</p>
 
